# OctoPrint-Wrapped

./: .pre-commit-config.yaml  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
extras/: README.txt  wrapped.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_wrapped/: __init__.py
octoprint_wrapped/static/clientjs/: wrapped.js
octoprint_wrapped/static/fonts/: LICENSE
octoprint_wrapped/static/js/: ko.src.svgtopng.js  wrapped.js
octoprint_wrapped/static/pure-snow/: pure-snow.css  pure-snow.js
octoprint_wrapped/templates/: wrapped.svg.jinja2  wrapped_about.jinja2  wrapped_navbar_snowfall.jinja2  wrapped_navbar_wrapped.jinja2
translations/: README.txt
